<resources>
    <string name="app_name">TBB Customer</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_a_new_account">Create a new account ?</string>
    <string name="login">Login</string>
    <string name="visible">Visible</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="submit">Register</string>
    <string name="registration">Registration</string>
    <string name="verification_msg">Your email is not verified.\nPlease click the below button and send the verification mail..! </string>
    <string name="verification_issue">Verification Issue</string>
    <string name="sent">Sent</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="order">Order</string>
    <string name="cart">Cart</string>
    <string name="wish_list">Wish List</string>
    <string name="profile">Profile</string>

    <string name="image">image</string>
    <string name="Price">Price:</string>
    <string name="max_price">Max Price:</string>
    <string name="discount_price">Discount Price:</string>
    <string name="category">Select Category</string>
    <string name="description">Description</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="buy">Buy</string>
    <string name="count">0</string>
    <string name="total_price">Payable Amt:</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="pin_code">Pincode</string>
    <string name="city">City/District</string>
    <string name="address_line_two">Address Line 2</string>
    <string name="address_line">Address Line</string>
    <string name="add_address">Add Address</string>
    <string name="address_view">Address View</string>
    <string name="payment">Payment</string>
    <string name="total_payable_amt">Total Payable Amt</string>
    <string name="keyRazor">rzp_test_PbVxx1Lln7qHZF</string>
    <string name="quantity">Quantity</string>
    <string name="buying_price">Buying Price:</string>
    <string name="order_status">Order Status</string>
    <string name="confirmed">Confirmed</string>
    <string name="completed">Completed</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="review">Review</string>
    <string name="write_here">Write here...</string>
    <string name="submit_review">Submit</string>
    <string name="rupees">\u20B9</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="address">Address</string>

</resources>