<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_add_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_address"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/eName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="10dp"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="none"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_add_address"/>
    <EditText
        android:id="@+id/eAddressLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address_line"
        android:padding="10dp"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="none"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eName"/>

    <EditText
        android:id="@+id/eAddressBuilding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address_line_two"
        android:padding="10dp"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:autofillHints="none"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/eAddressLine"/>

    <EditText
        android:id="@+id/eAddressCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:padding="10dp"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:autofillHints="none"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/eAddressBuilding"/>

    <EditText
        android:id="@+id/eAddressZipcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pin_code"
        android:padding="10dp"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:autofillHints="none"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/eAddressCity"/>

    <EditText
        android:id="@+id/eAddressState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        android:padding="10dp"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:autofillHints="none"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/eAddressZipcode"/>

    <EditText
        android:id="@+id/eAddressCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:padding="10dp"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:autofillHints="none"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/eAddressState" />

    <EditText
        android:id="@+id/eAddressPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:padding="10dp"
        android:inputType="phone"
        android:maxLength="10"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:autofillHints="none"
        android:background="@drawable/edit_bg_drawable"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/eAddressCountry" />

    <TextView
        android:id="@+id/text_save_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/add"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg_drawable"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/eAddressPhoneNumber" />

    <TextView
        android:id="@+id/text_cancel_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg_drawable"
        android:backgroundTint="#F44336"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@id/eAddressLine"
        app:layout_constraintEnd_toEndOf="@id/eAddressLine"
        app:layout_constraintTop_toBottomOf="@id/text_save_address"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>