<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@id/textForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBackArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="6dp"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/app_name"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/registration"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg_drawable"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:autofillHints="name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/subtitle"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"/>

    <EditText
        android:id="@+id/phoneNumberRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg_drawable"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="13"
        android:padding="12dp"
        android:textColor="@color/black"
        android:autofillHints="phone"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/subtitle"
        app:layout_constraintTop_toBottomOf="@id/nameRegistration"/>

    <EditText
        android:id="@+id/emailRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg_drawable"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:autofillHints="emailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/subtitle"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberRegistration"/>

    <View
        android:id="@+id/viewPwdRegistration"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_bg_drawable"
        app:layout_constraintTop_toBottomOf="@id/emailRegistration"
        app:layout_constraintStart_toStartOf="@id/nameRegistration"
        app:layout_constraintEnd_toEndOf="@id/nameRegistration" />

    <EditText
        android:id="@+id/passwordRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="12dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="password"
        android:textColorHint="@color/subtitle"
        app:layout_constraintEnd_toStartOf="@id/imgVisible"
        app:layout_constraintStart_toStartOf="@id/viewPwdRegistration"
        app:layout_constraintTop_toTopOf="@id/viewPwdRegistration"
        app:layout_constraintBottom_toBottomOf="@id/viewPwdRegistration"/>

    <ImageView
        android:id="@+id/imgVisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_visibility"
        android:background="#FFFFFF"
        android:onClick="showPassword"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:padding="8dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/visible"
        app:layout_constraintEnd_toEndOf="@id/viewPwdRegistration"
        app:layout_constraintTop_toTopOf="@id/viewPwdRegistration"
        app:layout_constraintBottom_toBottomOf="@id/viewPwdRegistration"/>

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg_drawable"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="@id/nameRegistration"
        app:layout_constraintEnd_toEndOf="@id/nameRegistration"
        app:layout_constraintTop_toBottomOf="@id/passwordRegistration"/>

</androidx.constraintlayout.widget.ConstraintLayout>